--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,9 @@ title: My Website
 # Your name to show in the footer
 author: Some Person
 
+# url
+url: "https://ystest234234.github.io"
+
 # --- List of links in the navigation bar --- #
 
 navbar-links:
