--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title: My Website
 author: Some Person
 
 # url
-url: "https://ystest234234.github.io"
+url: "https://devyongs.github.io"
 
 # --- List of links in the navigation bar --- #
 
